# thrift

./: configure.ac
aclocal/: ax_coap.m4  ax_lib_coap.m4
compiler/: README.MISB.md  ThriftTest.cpp  ThriftTest_c_helper.c
compiler/cpp/: CMakeLists.txt  Makefile.am
compiler/cpp/src/: Makefile.am
compiler/cpp/src/thrift/generate/: t_c_generator.cc  t_cpp_generator.cc  t_misb_generator.cc
compiler/misb-thrift/: Blah-test.cpp  Makefile  README.MISB.md  St0601-cxx-client.cpp  St0601-cxx-server.cpp  St0601-py-server.py  St0601-test.cpp  St060115-cxx-client.cpp  St060115-cxx-server.cpp  St060115-py-client  St060115-py-client.py  St060115-py-server  St060115-test.cpp  St0601Getter.cpp  St0601Getter.h  TODO  array-size.h  ber-test.cpp  ber.c  ber.h  beroid-test.cpp  beroid.c  beroid.h  debug.h  imap-test.cpp  imap.c  reverseN.c  st010212.thrift  st010212.thrift.ignore  st0601.thrift  st060115.thrift  st0903.thrift
compiler/misb-thrift/gen-cpp/: St060115.cpp  St060115.h  St060115_server.skeleton.cpp  st060115_constants.cpp  st060115_constants.h  st060115_types.cpp  st060115_types.h
lib/: Makefile.am  README.md
lib/c/: CMakeLists.txt  Makefile.am  README.md  TObject.h  thrift_c.pc  thrift_c.pc.in
lib/c/src/thrift/: config.h
lib/c/src/thrift/c/: bmp.c  bmp.h  thrift.c  thrift.h
lib/c/src/thrift/c/processor/: t_processor.c  t_processor.h
lib/c/src/thrift/c/protocol/: t_binary_protocol.c  t_binary_protocol.h  t_enum.h  t_protocol.c  t_protocol.h  t_protocol_factory.c  t_protocol_factory.h  thrift_protocol.c  thrift_protocol.h
lib/c/src/thrift/c/server/: t_server.c  t_server.h  t_simple_server.c  t_simple_server.h
lib/c/src/thrift/c/transport/: t_buffer_transports.c  t_buffer_transports.h  t_buffered_transports.c  t_buffered_transports.h  t_server_socket.c  t_server_socket.h  t_server_transport.c  t_server_transport.h  t_simple_transport_factory.c  t_simple_transport_factory.h  t_socket.c  t_socket.h  t_transport.c  t_transport.h  t_transport_factory.c  t_transport_factory.h  thrift_transport.h
lib/c/test/: Makefile.am  bmp_alloc_test.cpp  t_binary_protocol_test.cpp  t_buffer_transports_test.cpp  t_memory_buffer_test.cpp  t_protocol_test.cpp  t_socket_test.cpp
lib/c_glib/: Makefile.am  README.md  thrift_c_glib.pc.in
lib/cpp/: Makefile.am  thrift-coap.pc.in
lib/cpp/src/thrift/protocol/: St060115Tag.h  St0601Tag.h  TMISBProtocol.cpp  TMISBProtocol.h  TMISBProtocol.tcc  ber.c  ber.h  beroid.c  beroid.h  imap.h  reverseN.h
lib/cpp/src/thrift/transport/: TBufferTransports.h  TCoapClient.cpp  TCoapClient.h  TCoapServer.cpp  TCoapServer.h  TCoapTransport.cpp  TCoapTransport.h  TGetAddrInfoWrapper.cpp  TGetAddrInfoWrapper.h  THttpServer.cpp  THttpServer.h  TServerSocket.cpp  TServerSocket.h  TSocket.cpp  TSocket.h  TUdpServerSocket.cpp  TUdpServerSocket.h  TUdpSocket.cpp  TUdpSocket.h  TWrappedCTransport.h  cast_sockopt.h
lib/cpp/test/: Makefile.am  SecurityFromBufferTest  TMemoryBufferTest.cpp
lib/csharp/: Makefile.am
lib/js/: Makefile.am
lib/json/: Makefile.am
lib/lua/: Makefile.am
lib/netcore/: Makefile.am
lib/perl/: Makefile.am
lib/py/: Makefile.am
lib/xml/: Makefile.am
test/c/: CMakeLists.txt
test/cpp/: Makefile.am
test/cpp/src/: StressTestUdp.cpp
thrift-c-example/: .gitignore  Hello-cxx-client.cpp.ignore  Hello-cxx-server.cpp.ignore  Hello-py-client  Hello-py-server  ThriftTest-c-client.c  ThriftTest-c-server.c  ThriftTest-py-client  ThriftTest.thrift  array-size.h  bin2str.c  bin2str.h  ctx.c  ctx.h  debug.h  hello.thrift.ignore  hexprint.c  hexprint.h  minmax.h  readall.c  readall.h  thrift.h
thrift-c-example/src/thrift/c/: thrift_c_object.h
thrift-c-example/src/thrift/c/processor/: thrift_processor.h
thrift-c-example/src/thrift/c/protocol/: thrift_binary_protocol.c  thrift_binary_protocol.h  thrift_binary_protocol_factory.c  thrift_binary_protocol_factory.h  thrift_protocol.h  thrift_protocol_factory.h
thrift-c-example/src/thrift/c/server/: thrift_server.h  thrift_simple_server.c  thrift_simple_server.h
thrift-c-example/src/thrift/c/transport/: thrift_buffered_transports.c  thrift_buffered_transports.h  thrift_server_socket.c  thrift_server_socket.h  thrift_server_transport.h  thrift_transport.h  thrift_transport_factory.h
